[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Wiki.gd" type="Script" id=3]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_color = Color( 0.294118, 0.294118, 0.294118, 1 )
border_blend = true
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[node name="Background" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -296.0
margin_right = 512.0
margin_bottom = 296.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="." instance=ExtResource( 5 )]

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 38 )
text = "INGAME_WIKI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -624.0
margin_top = -232.0
margin_right = -8.0
margin_bottom = 232.0
custom_styles/bg = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 596.0
margin_bottom = 44.0
size_flags_horizontal = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -232.0
margin_right = 384.0
margin_bottom = 232.0
rect_clip_content = false
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 356.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeyboardShortcuts" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "KEYBOARD_SHORTCUTS"
expand_icon = true

[node name="Aurora" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 336.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "AURORA"
expand_icon = true

[node name="LevelUnlocks" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 336.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "LEVEL_UNLOCKS"
expand_icon = true

[node name="DarkMatter" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 336.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "DARK_MATTER"
expand_icon = true

[node name="B_strength" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 336.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "B_STRENGTH"
expand_icon = true

[node name="FM" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 336.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "FERROMAGNETIC_MATERIALS"
expand_icon = true

[node name="DarkEnergy" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 336.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
text = "DARK_ENERGY"
expand_icon = true

[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/KeyboardShortcuts" to="." method="_on_KeyboardShortcuts_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Aurora" to="." method="_on_Aurora_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/LevelUnlocks" to="." method="_on_LevelUnlocks_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DarkMatter" to="." method="_on_DarkMatter_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/B_strength" to="." method="_on_B_strength_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FM" to="." method="_on_FM_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DarkEnergy" to="." method="_on_DarkEnergy_pressed"]
